# AiliceOS

./: Cargo.toml  Makefile  README.md
.github/workflows/: main.yml  rust.yml
bootloader/: Cargo.toml
bootloader/src/: lib.rs  main.rs  page_table.rs
kernel/: Cargo.toml
kernel/src/: config.rs  console.rs  io.rs  lang.rs  main.rs  shell.rs
kernel/src/board/: acpi.rs  acpi_table.rs  cpu.rs  keyboard.rs  mod.rs
kernel/src/drivers/: mod.rs  provider.rs
kernel/src/drivers/block/: ahci.rs  mod.rs
kernel/src/drivers/bus/: mod.rs  pci.rs
kernel/src/drivers/gpu/: mod.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/fs/: inode_ext.rs  mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/memory/: heap.rs  mod.rs
kernel/src/sched/: mod.rs
user/: Cargo.toml
user/.cargo/: amd64-user.json  config
user/src/: console.rs  lang.rs  lib.rs
users/: hello.txt  hello_world  main.c  uname.txt
users/test/: next_folder.txt
