[package]
name = "kernel"
version = "0.1.0"
authors = ["Senseiod <moyan@iouyi.top>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uart_16550 = "0.2.10"
buddy_system_allocator = "0.5.0"
x86_64 = "0.12.2"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.5.2"
raw-cpuid = "8.0.0"
acpi = "1.1.0"

# Others Dependencies
bootloader = { path = "../bootloader",default-features = false}
trapframe = { git = "https://github.com/rcore-os/trapframe-rs.git" }
rcore-console = { git = "https://github.com/rcore-os/rcore-console.git", default-features = false}
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }